# t9-trie

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: build.yml
benchmarks/: CMakeLists.txt  TrieVsHashMap.cpp
examples/: CMakeLists.txt  hashmap_example_main.cpp  trie_example_main.cpp
include/t9trie/: Dictionary.hpp  DictionaryLoader.hpp  Trie.hpp
src/: CMakeLists.txt  DictionaryLoader.cpp  DictionaryLoader.hpp  HashMap.cpp  HashMap.hpp  Trie.cpp  Trie.hpp  main.cpp
standalone_app/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  t9_tests.cpp  trie_tests.cpp  trie_tests_main.cpp
